// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen scripts config import-export] should create the scripts: the scripts have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ script => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen scripts config import-export] should update the scripts: the scripts have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ script => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
